--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-nav-bar></app-nav-bar>
-<app-session></app-session>
+<!-- <app-nav-bar></app-nav-bar> -->
+<!-- <app-session></app-session> -->
+<!-- <app-chart></app-chart> -->
+<app-dashboard></app-dashboard>
+<!-- <app-apexchart></app-apexchart> -->
