--- a/src/app/components/nav-bar2/nav-bar2.component.html
+++ b/src/app/components/nav-bar2/nav-bar2.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-b border-gray-200 px-4 py-3 dark:bg-gray-800 dark:border-gray-700 fixed left-0 right-0 top-0 z-50">
+<nav class="bg-white border-b border-gray-200 px-4 py-3 dark:bg-gray-800 dark:border-gray-700  left-0 right-0 top-0 z-50">
     <div class="flex flex-wrap justify-between items-center">
       <div class="flex justify-start items-center">
         <button
@@ -72,7 +72,7 @@
         </button>
         <!-- Dropdown menu -->
         <div *ngIf="userMenu"
-          class="z-100 my-4 w-56 text-base  bg-white divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl absolute top-full right-0"
+          class="z-50 my-4 w-56 text-base  bg-white divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 rounded-xl absolute top-full right-0"
           id="dropdown"
         >
           <div class="py-3 px-4">
