--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
   <div class="flex max-h-full:">
     <app-sidebar [sidenav]="sidenav"></app-sidebar>
 
+    <!-- fix responsive -->
     <main class="flex-1 p-4 lg:p-6">
       <div class="lg:flex lg:flex-row lg:gap-4">
         <div class="lg:w-2/3  max-h-full text-center rounded-lg border-gray-300 dark:border-gray-600">
